# os_auto_deployment

./: .gitignore  Dockerfile.build  README.md  boot_log_search.md  build-cli.sh  build-requirements.txt  build_mi325xr_node3_node4.yml  change_log.md  cli_entry.py  config.json.template  deploy_mi325xr_node3_node4.yml  enable_rmedia_fail.md  main_change_log.md  main_debug_note.md  pyproject.toml  search_for_postlog_api.md  test_event_log.py
autoinstall/: 20_binaryless_ipmi_concept.py  build-ubuntu-autoinstall-iso.sh  build_log.txt  debug_note.md  generate_file_list.py  ipmi_start_logger.py  original_grub.cfg  original_txt.cfg  package_list  package_list.short  startup.nsh  test_ubuntu_autoinstall.sh
autoinstall/build-iso-go/: .gitignore  README.md  build.sh  embed.go  go.mod  go.sum  main.go  main_test.go  scripts
autoinstall/doc/: 01_architecture.md  02_workflow.md  05_build_script_modification.md  07_preseed_implementation_plan.md  08_uefi_boot_fix.md  09_bios_boot_image_detection.md  10_grub_font_loading_fix.md  11_kernel_boot_parameter_fix.md  12_isolinux_patching_bios.md  13_preseed_support_18_04.md  14_legacy_18_04_boot_fixes.md  16_beginner_architecture_and_workflow.md  17_day1_operator_cheat_sheet.md  17_sel_logging_commands.md  19_debug_missing_ip_part_2.md  20_offline_install_hardening.md  22_autoinstall_mermaid_charts.md  25_debug_multipath_abi_mismatch.md  README.md  (+5 more)
doc/: 01_architecture_and_flow.md  architecture.drawio  architecture_simple.drawio  architecture_simple_original.drawio  beginner.md  main_usage.md  ubuntu_autoinstall_storage.docx
(+132 files in other folders)
